--- a/TransportFeverTownsEditor/TransportFeverTownsEditor.csproj
+++ b/TransportFeverTownsEditor/TransportFeverTownsEditor.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Classes\Coord.cs" />
     <Compile Include="Classes\Town.cs" />
+    <Compile Include="Classes\Utils.cs" />
     <Compile Include="FChangeSizeFactor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +70,12 @@
     <Compile Include="FMain.Designer.cs">
       <DependentUpon>FMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FSelectByRegEx.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FSelectByRegEx.Designer.cs">
+      <DependentUpon>FSelectByRegEx.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FChangeSizeFactor.resx">
@@ -76,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FMain.resx">
       <DependentUpon>FMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FSelectByRegEx.resx">
+      <DependentUpon>FSelectByRegEx.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,6 +113,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
